# meshloader

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
cmake/: Cache.cmake  ClangToolchain.cmake  CompilerWarnings.cmake  Conan.cmake  ProjectSettings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
fuzz_test/: CMakeLists.txt
profile/: CMakeLists.txt  main.cpp  sdf.ppm
src/: CMakeLists.txt  config.h.in  config.hpp  gltf_loader.cpp  gltf_loader.hpp  main.cpp  math_helper.hpp  mesh_loader.cpp  mesh_loader.hpp  mesh_tools.cpp  mesh_tools.hpp  obj_loader.cpp  obj_loader.hpp  structures.hpp
test/: CMakeLists.txt  cube.gltf  tests.cpp
